--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -4,6 +4,7 @@
 
 <head>
     <title>MGMT</title>
+    {{!-- BOOTSTRAP LINKS BELOW: BOOTSTRAP CDN --}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css" integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
         
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
